[gd_scene load_steps=4 format=3 uid="uid://bab88o2d5xerh"]

[ext_resource type="Script" path="res://ui/views/editor/components/node_inspector/property.gd" id="1_0xf8k"]
[ext_resource type="Texture2D" uid="uid://dop15wai55gt6" path="res://ui/icons/icon_pin.svg" id="2_kx3ec"]
[ext_resource type="Texture2D" uid="uid://ws2w6wus0rdn" path="res://ui/icons/icon_warning.svg" id="3_kprkq"]

[node name="Property" type="VBoxContainer"]
offset_right = 28.0
offset_bottom = 24.0
size_flags_horizontal = 5
size_flags_vertical = 5
theme_override_constants/separation = 2
script = ExtResource("1_0xf8k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Component" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="PinButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
toggle_mode = true
icon = ExtResource("2_kx3ec")
icon_alignment = 1
expand_icon = true

[node name="VisibilityBox" type="CheckBox" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1
icon_alignment = 1

[node name="PinOptionsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PinOptionsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PinOptionsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PinPathEdit" type="LineEdit" parent="PinOptionsContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Variable name"

[node name="WarningButton" type="Button" parent="PinOptionsContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_kprkq")
flat = true
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="PinOptionsContainer"]
layout_mode = 2
